--- a/index.html
+++ b/index.html
@@ -1,110 +1,144 @@
-<title>Calculator</title>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <title>Scientific Calculator</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <style>
-    body {1
-      font-family: Arial, sans-serif;
+    body {
+      margin: 0;
+      font-family: 'Segoe UI', sans-serif;
+      background: #f2f2f2;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
     }
+
     .calculator {
-      width: 250px;
-      margin: 50px auto;
+      background: #fff;
       padding: 20px;
-      border: 1px solid #cccccc;
-      border-radius: 10px;
-      box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+      border-radius: 12px;
+      box-shadow: 0 10px 30px rgba(0,0,0,0.2);
+      width: 350px;
     }
-    .display {
+
+    #display {
       width: 100%;
-      height: 50px;
-      padding: 10px;
-      border: none;
-      border-radius: 10px;
+      height: 60px;
       font-size: 24px;
       text-align: right;
+      padding: 10px;
+      margin-bottom: 15px;
+      border: none;
+      background: #eee;
+      border-radius: 8px;
     }
+
     .buttons {
       display: grid;
       grid-template-columns: repeat(4, 1fr);
-      grid-gap: 10px;
-      margin-top: 20px;
+      gap: 10px;
     }
+
     button {
-      padding: 10px;
+      padding: 18px;
+      font-size: 16px;
       border: none;
-      border-radius: 10px;
-      background-color: #4CAF50;
-      color: #fff;
+      border-radius: 8px;
+      background: #f0f0f0;
       cursor: pointer;
+      transition: background 0.2s;
     }
+
     button:hover {
-      background-color: #3e8e41;
+      background: #d0d0d0;
+    }
+
+    button.equals {
+      background-color: #4CAF50;
+      color: white;
+      grid-row: span 2;
+    }
+
+    button.equals:hover {
+      background-color: #45a049;
+    }
+
+    button.zero {
+      grid-column: span 2;
     }
   </style>
 </head>
 <body>
   <div class="calculator">
-    <input type="text" id="display" class="display" disabled>
+    <input type="text" id="display" disabled placeholder="0" />
     <div class="buttons">
+      <button onclick="appendFunction('Math.sin(')">sin</button>
+      <button onclick="appendFunction('Math.cos(')">cos</button>
+      <button onclick="appendFunction('Math.tan(')">tan</button>
+      <button onclick="appendFunction('Math.log10(')">log</button>
+      <button onclick="appendFunction('Math.sqrt(')">√</button>
+
+      <button onclick="appendValue('Math.PI')">π</button>
+      <button onclick="appendValue('Math.E')">e</button>
+      <button onclick="appendFunction('Math.pow(')">xʸ</button>
+      <button onclick="appendValue('(')">(</button>
+      <button onclick="appendValue(')')">)</button>
+
       <button onclick="clearDisplay()">C</button>
-      <button onclick="deleteLastCharacter()">DEL</button>
-      <button onclick="calculateResult('/')">/</button>
-      <button onclick="calculateResult('*')">*</button>
-      <button onclick="appendNumber('7')">7</button>
-      <button onclick="appendNumber('8')">8</button>
-      <button onclick="appendNumber('9')">9</button>
-      <button onclick="calculateResult('-')">-</button>
-      <button onclick="appendNumber('4')">4</button>
-      <button onclick="appendNumber('5')">5</button>
-      <button onclick="appendNumber('6')">6</button>
-      <button onclick="calculateResult('+')">+</button>
-      <button onclick="appendNumber('1')">1</button>
-      <button onclick="appendNumber('2')">2</button>
-      <button onclick="appendNumber('3')">3</button>
-      <button onclick="calculateResult()">=</button>
-      <button onclick="appendNumber('0')">0</button>
-      <button onclick="appendDecimal()">.</button>
+      <button onclick="deleteLast()">⌫</button>
+      <button onclick="appendValue('/')">÷</button>
+      <button onclick="appendValue('*')">×</button>
+
+      <button onclick="appendValue('7')">7</button>
+      <button onclick="appendValue('8')">8</button>
+      <button onclick="appendValue('9')">9</button>
+      <button onclick="appendValue('-')">−</button>
+
+      <button onclick="appendValue('4')">4</button>
+      <button onclick="appendValue('5')">5</button>
+      <button onclick="appendValue('6')">6</button>
+      <button onclick="appendValue('+')">+</button>
+
+      <button onclick="appendValue('1')">1</button>
+      <button onclick="appendValue('2')">2</button>
+      <button onclick="appendValue('3')">3</button>
+      <button class="equals" onclick="calculate()">=</button>
+
+      <button onclick="appendValue('0')" class="zero">0</button>
+      <button onclick="appendValue('.')">.</button>
     </div>
   </div>
+
   <script>
-    let calculation = '';
-    const display = document.getElementById('display');
-
-    function appendNumber(number) {
-      calculation += number;
-      updateDisplay();
+    function appendValue(value) {
+      const display = document.getElementById('display');
+      display.value += value;
     }
 
-    function appendDecimal() {
-      if (!calculation.includes('.')) {
-        calculation += '.';
-        updateDisplay();
-      }
-    }
-
-    function calculateResult(operator) {
-      if (operator) {
-        calculation += operator;
-      } else {
-        try {
-          const result = eval(calculation);
-          calculation = result.toString();
-        } catch (error) {
-          calculation = 'Error';
-        }
-      }
-      updateDisplay();
+    function appendFunction(func) {
+      const display = document.getElementById('display');
+      display.value += func;
     }
 
     function clearDisplay() {
-      calculation = '';
-      updateDisplay();
+      document.getElementById('display').value = '';
     }
 
-    function deleteLastCharacter() {
-      calculation = calculation.slice(0, -1);
-      updateDisplay();
+    function deleteLast() {
+      const display = document.getElementById('display');
+      display.value = display.value.slice(0, -1);
     }
 
-    function updateDisplay() {
-      display.value = calculation;
+    function calculate() {
+      const display = document.getElementById('display');
+      try {
+        const result = eval(display.value);
+        display.value = result;
+      } catch {
+        display.value = "Error";
+      }
     }
   </script>
 </body>
